<resources>
    <string name="app_name">IOLaboratorio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_connected_list">ConnectedListActivity</string>

    <!-- Activity Principal -->
    <string name="activity_principal_titulo">Principal</string>
    <string name="activity_principal_btn_ingresar">Ingresar</string>
    <string name="activity_principal_btn_consultar_listado">Consultar usuarios registrados</string>
    <string name="activity_principal_btn_salir">Salir</string>

    <!-- Activity Inicio -->
    <string name="activity_inicio_titulo">Inicio</string>
    <string name="activity_inicio_btn_ingresar">Ingresar</string>
    <string name="activity_inicio_btn_registrarse">Registrarse</string>

    <string name="nombre">Nombre</string>
    <string name="fecha_ingreso">Fecha de Ingreso</string>
    <string name="fecha_egreso">Fecha de Egreso</string>

    <!-- Activity Registrarse -->
    <string name="activity_registrarse_nombre">Nombre de usuario</string>
    <string name="activity_registrarse_clave">Clave</string>
    <string name="activity_registrarse_btn_registrarse">Registrarse</string>

    <!-- Activity Ingresar -->
    <string name="activity_ingresar_nombre">Nombre de usuario</string>
    <string name="activity_ingresar_clave">Clave</string>
    <string name="activity_ingresar_btn_ingresar">Ingresar</string>

</resources>
