<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_inicio_margin_horizontal_botones"
        android:layout_marginRight="@dimen/activity_inicio_margin_horizontal_botones"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNombre"
            android:hint="@string/activity_registrarse_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtClave"
            android:inputType="textPassword"
            android:hint="@string/activity_registrarse_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_registrarse_btn_registrarse" />

    </LinearLayout>


</RelativeLayout>